--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/compiler-sfc": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.9.0",
-    "eslint-plugin-vue": "^8.4.1"
+    "eslint-plugin-vue": "^8.4.1",
+    "prettier": "2.5.1"
   }
 }
